# cunqa

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  QPE15_15QPUs.json  QPE16_26QPUs.json  QPE16_27QPUs.json  QPE3_2QPUs.json  README.html  README.md  configure.sh  cunqa.backend.Backend.html  cunqa.backend.BackendData.html  cunqa.backend.html  cunqa.circuit.ControlContext.html  cunqa.circuit.CunqaCircuit.html  cunqa.circuit.CunqaCircuitError.html  cunqa.circuit.html  cunqa.converters.ConvertersError.html  cunqa.converters.convert.html  cunqa.converters.html  cunqa.html  cunqa.mappers.QJobMapper.html  cunqa.mappers.QPUCircuitMapper.html  cunqa.mappers.html  cunqa.mappers.run_distributed.html  cunqa.qjob.QJob.html  cunqa.qjob.QJobError.html  cunqa.qjob.gather.html  cunqa.qjob.html  cunqa.qpu.QPU.html  cunqa.qpu.html  cunqa.qutils.QRaiseError.html  cunqa.qutils.get_QPUs.html  cunqa.qutils.html  (+21 more)
cunqa/: CMakeLists.txt  __init__.py  backend.py  bindings.cpp  circuit.py  converters.py  fakeqmio.py  logger.py  mappers.py  noise.sh  qjob.py  qpu.py  qpu_api.py  qutils.py  result.py  translator_qc_to_json.py  transpile.py
cunqa/circuit/: core.py  ir.py
cunqa/noise_model/: cunqabackend.py  fakeqmio.py  noise_instructions.py
cunqa/noise_model/json_schema/: backend_schema.json  calibrations_schema.json  config_file_schema.json
cunqa/qiskit_deps/: transpiler.py
cunqa/real_qpus/: qmio_linker.py
cunqa/utils/: CMakeLists.txt  __init__.py  file_utils.py  id_utils.py
examples/: CMakeLists.txt  Cunqa-QPE.ipynb  Cunqa-QPE_v2.ipynb  Multiple_circuits_execution.ipynb  Optimizers_II_mapping.ipynb  Optimizers_I_upgrading_parameters.ipynb  Untitled.ipynb  Untitled1.ipynb  bechmark_version_0.ipynb  benchmark.ipynb  circuit_15qubits_10layers.json  circuito.pkl  compile.sh  data.json  demo.py  distr_QPE.py  dummy_distr_example.py  example.cpp  example.py  example1.cpp  example2.cpp  example_aer.py  example_cunqasimulator.py  example_cunqasimulator_distributed.py  example_cunqasimulator_simple.py  example_mlosada.py  example_munich.py  generar_circuito.py  launch_tests.sh  munich_noise.json  notebook_example.ipynb  optimization_example.py  parametric_example.py  pybind_test.cpp  qc_json.json  qpu_client.cpp  qraise_9638956  test.py  test_0.0.py  test_0.2.py  (+2 more)
examples/CESGA_use_cases/Distributed Grover/: distr_Grover.py
examples/CESGA_use_cases/EP-use-case/: cunqa_226107  cunqa_226109  cunqa_226110  cunqa_228080  graph.py  launch.sh  launch_multi.sh  launch_qpus.sh  pool_228093  qiskit_228099  run-vqe-cunqa.py  run-vqe-pool.py  run-vqe-qiskit.py  (+1 more)
examples/backends/: cunqa_backend.json  fakeqmio_backend.json  munich_noise.json
examples/bus_error_hunting/: example.txt  example_aer.py  execute_example.sbatch  execute_loads.sh
examples/calibrations/: standard_noise_properties_example.json
examples/cc_examples/: 01-the_easy_one.py  02-the_cyclic_one.py  03-the_better_cyclic_one.py  05-ibm-cut-bell-pairs-telegate.py  distributed_raw.py  munich_cc.py
examples/ccomm_examples/: 01-the_easy_one.py  02-the_cyclic_one.py  03-the_better_cyclic_one.py  04-distr_QPE.py  05-ibm-cut-bell-pairs-telegate.py  distributed_raw.py
examples/circuits/: circuit_15qubits_2layers.json
examples/cpp/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  qc_example.cpp  simplest_example.cpp
examples/cpp_examples/: CMakeLists.txt  example2.cpp  example3.cpp
examples/flow_from_bash/: controllers.sh  workflow_from_slurm.sh
examples/insfrastructure/: dummy_infrastructure.json  dummy_qpu.json  dummy_qpu_0.json  dummy_qpu_1.json  info.txt  infrastructure.json  infrastructure_with_classical_resources.json  qpu.json  qpus_test.py
examples/jupyter/: Multiple_circuits_execution.ipynb  Optimizers_II_mapping.ipynb  Optimizers_I_upgrading_parameters.ipynb
examples/marta/: ejemplos_de_uso.py
examples/noise_example/: calibration_file.json
examples/python/: basic_example.py  cif_example.py  cloud_example.py  example_qraise.py  simple_raw.py
examples/python_examples/: example_cloud.py
examples/qc_examples/: simple_example.py
python/: CMakeLists.txt  __init__.py  backend.py  backend_options.py  bindings.cpp  circuit.py  cluster.py  cluster_old.py  dask_cluster.py  default_qmio_calibration.json  fakeqmio.py  logger.py  qjob.py  qpu.json  qpu.py  test_c_integration.py  tests_Alvaro.ipynb  transpile.py
python/DQS/: __init__.py  backend.py  cliente.py  cluster.py  lanza_.py  lanzar_server.sh  mi_trabajo.sh  myjob_47693.err  myjob_47696.err  myjob_47698.err  myjob_47700.err  myjob_47713.err  prueba.cpp  prueba_dist.py  pybind_test.cpp  qpus.json  server.py  utils.py
src/: CMakeLists.txt  backend.hpp  circuit.hpp  compile.sh  example_circuit.json  qpu.cpp  qpu.hpp  qpu.json  quantum_task.cpp  quantum_task.hpp  simulator.hpp
src/backends/: CMakeLists.txt  backend.hpp  backend_old.hpp  cc_backend.hpp  classical_comm_backend.hpp  qc_backend.hpp  simple_backend.hpp
src/classical_channel/: CMakeLists.txt  classical_channel.hpp
src/classical_node/: classical_node.hpp  communication_component.hpp
src/cli/: CMakeLists.txt  compile.sh  epilog.sh  infoqpus.cpp  qdrop.cpp  qinfo.cpp  qraise.cpp  setup_executor.cpp  setup_qpus.cpp  setup_qpus_comm.cpp  slurm_ft3.conf  slurm_qmio.conf
src/comm/: CMakeLists.txt  client.hpp  future_wrapper.hpp  ip_config.hpp  qpu.json  qpu_comm.hpp  server.hpp  strategy_def.h.in
src/config/: CMakeLists.txt  backend_config.hpp  config.hpp  execution_config.hpp  net_config.hpp  qpu_config.hpp  run_config.hpp
src/qmpi/: qmpi.hpp
src/simulators/: CMakeLists.txt  aer_simulator.hpp  cunqasimulator.hpp  munich_simulator.hpp  munichsimulator.cpp  munichsimulator.hpp  simulator.hpp
src/utils/: CMakeLists.txt  backend_utils.hpp  basis_gates.json  constants.hpp  constants.hpp.in  custom_json.cpp  custom_json.hpp  fakeqmio.hpp  helpers.hpp  ip_config.hpp  json.cpp  json.hpp  logger.hpp  noise_logs.txt  parametric_circuit.hpp  prueba  prueba.sh  qpu_utils.hpp  qpus.json  setup_qpus_utils.hpp
(+1058 files in other folders)
