
#add_executable(example2 example2.cpp)


#target_link_libraries(example2 PRIVATE munich_ccomm_simulator json MQT::DDSim) 
#target_include_directories(example2 PRIVATE
#        /mnt/netapp1/Store_CESGA/home/cesga/acarballido/repos/api-simulator/src/backends/simulators/Munich
#)
#install(TARGETS example2 DESTINATION example)
