
if(COMM_LIB STREQUAL "ASIO")
    add_library(comm-strat INTERFACE)
    target_link_libraries(comm-strat INTERFACE Boost::Boost)
    target_include_directories(comm-strat INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/asio")
    message(DEBUG "ASIO library added.")
elseif(COMM_LIB == "ZMQ")
    message(FATAL_ERROR "No implementation of ZMQ servers developed.")
elseif(COMM_LIB == "CROW")
    message(FATAL_ERROR "No implementation of CROW servers developed.")
endif()